# ignition-rag-agent

./: .env.example  .gitignore  .gitmodules  CURSOR_README.md  Dockerfile  Dockerfile.e2e  README.md  api.py  concurrency_test.py  cursor.config.json  cursor_agent.py  cursor_client.py  cursor_connector.js  cursor_extension.js  cursor_integration.js  docker-compose.e2e.yml  docker-compose.local.yml  docker-compose.yml  example_client.py  indexer.py  install_cursor_extension.sh  last_index_time.pkl  logger.py  main.py  package.json  pyproject.toml  pytest.ini  requirements.txt  run_cursor_demo.sh  run_e2e_tests.sh  run_lint.sh  run_local.sh  run_server.sh  run_tests.sh  sample_indexer.py  test_chunking.py  test_index.sh  test_integration.js  watcher.py
.github/workflows/: main.yml
chroma_index/: chroma.sqlite3
docs/: API_DOCUMENTATION.md  COMPLETE_SETUP_GUIDE.md  QUICK_START.md  README.md
tests/data/: sample_tags.json  sample_view.json
tests/e2e/: conftest.py  test_e2e.py  test_indexer_e2e.py
tests/integration/: test_integration.py
tests/unit/: test_api.py  test_indexer.py
