[project]
name = "ignition-rag-agent"
version = "0.1.0"
description = "Retrieval-Augmented Generation (RAG) pipeline for Ignition codebase"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "YourName"},
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "black",
    "flake8",
    "isort",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "unit: unit tests that mock external dependencies",
    "integration: integration tests that require external dependencies",
    "slow: tests that are slow to run",
]

[tool.ruff]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
